--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ repositories {
 dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
     implementation 'org.testng:testng:7.1.0'
+    implementation 'ch.qos.logback:logback-classic:1.2.3'
 
 }
 test{
@@ -24,8 +25,21 @@ test{
 }
 
 task testRegr(type: Test){
-    useTestNG()
+    useTestNG {
+        suites 'src/test/resources/testng-regression.xml'
+    }
     if (project.hasProperty('browser')) {
         systemProperty 'browser', "${browser}"
     }
 }
+task testUser(type: Test){
+    useTestNG {
+        suites 'src/test/resources/testng-User.xml'
+    }
+    if (project.hasProperty('browser')) {
+        systemProperty 'browser', "${browser}"
+    }
+}
+
+
+
