--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 .gradle
-/build/
+/build/classes/
+/build/generated/
+/build/resources/
+/build/reports/
+
+
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -12,3 +17,6 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+*.log
+
+*.log
